--- a/Wordle(Clone)/index.html
+++ b/Wordle(Clone)/index.html
@@ -9,42 +9,57 @@
 </head>
 <body>
     <header>
-        <h1>Wordle</h1>
+        <h1 class="middle">Wordle</h1>
     </header>
     <div class="info">
-        <div class="spiral">@</div>
+        <div class="spiral hidden middle">@</div>
     </div>
-    <div class="scoreboard">
-        <div class="scoreboardletter" id="letter-0"></div>
-        <div class="scoreboardletter" id="letter-1"></div>
-        <div class="scoreboardletter" id="letter-2"></div>
-        <div class="scoreboardletter" id="letter-3"></div>
-        <div class="scoreboardletter" id="letter-4"></div>
-        <div class="scoreboardletter" id="letter-5"></div>
-        <div class="scoreboardletter" id="letter-6"></div>
-        <div class="scoreboardletter" id="letter-7"></div>
-        <div class="scoreboardletter" id="letter-8"></div>
-        <div class="scoreboardletter" id="letter-9"></div>
-        <div class="scoreboardletter" id="letter-10"></div>
-        <div class="scoreboardletter" id="letter-11"></div>
-        <div class="scoreboardletter" id="letter-12"></div>
-        <div class="scoreboardletter" id="letter-13"></div>
-        <div class="scoreboardletter" id="letter-14"></div>
-        <div class="scoreboardletter" id="letter-15"></div>
-        <div class="scoreboardletter" id="letter-16"></div>
-        <div class="scoreboardletter" id="letter-17"></div>
-        <div class="scoreboardletter" id="letter-18"></div>
-        <div class="scoreboardletter" id="letter-19"></div>
-        <div class="scoreboardletter" id="letter-20"></div>
-        <div class="scoreboardletter" id="letter-21"></div>
-        <div class="scoreboardletter" id="letter-22"></div>
-        <div class="scoreboardletter" id="letter-23"></div>
-        <div class="scoreboardletter" id="letter-24"></div>
-        <div class="scoreboardletter" id="letter-25"></div>
-        <div class="scoreboardletter" id="letter-26"></div>
-        <div class="scoreboardletter" id="letter-27"></div>
-        <div class="scoreboardletter" id="letter-28"></div>
-        <div class="scoreboardletter" id="letter-29"></div>
+    <div class="scoreboard ">
+        <div class="firstrow row">
+            <div class="scoreboardletter" id="letter-0"></div>
+            <div class="scoreboardletter" id="letter-1"></div>
+            <div class="scoreboardletter" id="letter-2"></div>
+            <div class="scoreboardletter" id="letter-3"></div>
+            <div class="scoreboardletter" id="letter-4"></div>
+        </div>
+        <div class="secondrow row">
+            <div class="scoreboardletter" id="letter-5"></div>
+            <div class="scoreboardletter" id="letter-6"></div>
+            <div class="scoreboardletter" id="letter-7"></div>
+            <div class="scoreboardletter" id="letter-8"></div>
+            <div class="scoreboardletter" id="letter-9"></div>
+        </div>
+        <div class="thirdrow row">
+
+            <div class="scoreboardletter" id="letter-10"></div>
+            <div class="scoreboardletter" id="letter-11"></div>
+            <div class="scoreboardletter" id="letter-12"></div>
+            <div class="scoreboardletter" id="letter-13"></div>
+            <div class="scoreboardletter" id="letter-14"></div>
+        </div>
+        <div class="fourthrow row">
+
+            <div class="scoreboardletter" id="letter-15"></div>
+            <div class="scoreboardletter" id="letter-16"></div>
+            <div class="scoreboardletter" id="letter-17"></div>
+            <div class="scoreboardletter" id="letter-18"></div>
+            <div class="scoreboardletter" id="letter-19"></div>
+        </div>
+        <div class="fifthrow row">
+
+            <div class="scoreboardletter" id="letter-20"></div>
+            <div class="scoreboardletter" id="letter-21"></div>
+            <div class="scoreboardletter" id="letter-22"></div>
+            <div class="scoreboardletter" id="letter-23"></div>
+            <div class="scoreboardletter" id="letter-24"></div>
+        </div>
+        <div class="sixthrow row">
+            <div class="scoreboardletter" id="letter-25"></div>
+            <div class="scoreboardletter" id="letter-26"></div>
+            <div class="scoreboardletter" id="letter-27"></div>
+            <div class="scoreboardletter" id="letter-28"></div>
+            <div class="scoreboardletter" id="letter-29"></div>
+        </div>
     </div>
     <script src="script.js"></script>
 </body>
