added an output div

--- a/Wordle(Clone)/index.html
+++ b/Wordle(Clone)/index.html
@@ -13,7 +13,9 @@
     </header>
     <div class="info">
         <div class="spiral hidden middle">@</div>
+        
     </div>
+    <div class="output"></div>
     <div class="scoreboard ">
         <div class="firstrow row">
             <div class="scoreboardletter" id="letter-0"></div>
